k8s/suma-pmo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: suma-pmo
  labels:
    name: suma-pmo
